# CodeAgentAttacker

./: ANALYSIS_BUG_INJECTION.md  README.md  pyproject.toml
bug_injection/: README.md  __init__.py  bug_injector.py
bug_injection/example/: 1.json  1.patch  1.py  1_transformation.py
bug_injection/simulator/: mini_extractor.py  run_mini_simulator.py
bug_injection/tool/: __init__.py  init.py  python_transformer.py  text_transformer.py  utils.py
bug_injection/tool/operators/: AprChangeArithOp.py  AprChangeCompareOp.py  AprChangeConditionOp.py  AprChangeReturn.py  AprChangeType.py  AprConditionAddition.py  AprElseRemoval.py  AprExceptionRemoval.py  AprIfBlockRemoval.py  AprIfChunkRemoval.py  AprLoopUnwrap.py  AprMethodCallParReplacement.py  AprMethodCallReplacement.py  AprNullCheckRemoval.py  AprPartialConditionRemoval.py  AprRemoveCall.py  AprReturnRemoval.py  AprVarReplacement.py  __init__.py
data_exfiltration/malicious_tests/fake_environment/: fake_private_key.txt
data_exfiltration/readme_attack/: fake_secret.txt
data_exfiltration/readme_attack/A/: README.md
data_exfiltration/readme_attack/B/: README.md  command.sh
mini-swe-agent/: .pre-commit-config.yaml  mkdocs.yml
mini-swe-agent/docs/advanced/: yaml_configuration.md
mini-swe-agent/docs/models/: quickstart.md
mini-swe-agent/script/: debug_run.sh  eval_sample_inject.sh  inject_run.sh  openai__gpt-5-mini.1.json  openai__gpt-5-mini.2.json  run_swebench.sh  sample_inject.sh
mini-swe-agent/script/misc/: compare_w_wo_attack_resolution.py  compare_w_wo_attack_traj.py  (+1 more)
misc/: sample_code.py
(+185 files in other folders)
